--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <div class="header__nav-mobile">
                     <img src="./img/icons/search.svg" alt="">
                     <img src="./img/icons/shopping-cart.svg" alt="">
-                    <img src="./img/icons/menu.svg" alt="" class="header__nav-mobile_menu-icon">
-                    <ul class="header__menu-list">
+                    <!-- <ul class="header__menu-list">
                         <li class="header__menu-item">
                             <a href="#!" class="header__menu-link">Home</a>
                         </li>
@@ -33,19 +32,20 @@
                         <li class="header__menu-item">
                             <a href="#!" class="header__menu-link">Contact</a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
+                <img src="./img/icons/menu.svg" alt="" class="header__nav-mobile_menu-icon">
                 <ul class="header__list">
-                    <li class="header__list">
+                    <li class="header__item">
                         <a href="#!" class="header__link">Home</a>
                     </li>
-                    <li class="header__list">
+                    <li class="header__item">
                         <a href="#!" class="header__link">Product</a>
                     </li>
-                    <li class="header__list">
+                    <li class="header__item">
                         <a href="#!" class="header__link">Pricing</a>
                     </li>
-                    <li class="header__list">
+                    <li class="header__item">
                         <a href="#!" class="header__link">Contact</a>
                     </li>
                 </ul>
