--- a/index.html
+++ b/index.html
@@ -552,15 +552,15 @@
                 <form action="" class="form__form">
                     <h3 class="form__title">Book Appointment</h3>
                     <label for="name" class="form__label">Name *</label>
-                    <input type="text" class="form__input" id="name" placeholder="Full Name *">
+                    <input type="text" class="form__input" id="name" placeholder="Full Name *" required>
                     <label for="email" class="form__label">Email address *</label>
-                    <input type="email" class="form__input" id="email" placeholder="example@gmail.com">
+                    <input type="email" class="form__input" id="email" placeholder="example@gmail.com" required>
                     <label for="department" class="form__label">Department *</label>
-                    <select name="" id="department" class="form__select">
+                    <select name="" id="department" class="form__select" required>
                     <option value="" class="form__option" selected disabled>Please Select</option>
                     </select>
                     <label for="time" class="form__label">Time *</label>
-                    <select name="" id="time" class="form__select">
+                    <select name="" id="time" class="form__select" required>
                     <option value="" class="form__option" selected disabled>4:00 Available</option>
                     </select>
                     <button class="form__btn btn">Book Appointment</button>
